プロトタイプできた（仮）

--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/reset.css">
-    
+    <link rel="stylesheet" href="%PUBLIC_URL%/reset.css" />
+
     <!-- search_box link-->
     <!-- <link href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" rel="stylesheet"> -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -32,6 +29,7 @@
     <title>React App</title>
   </head>
   <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
